This file shows a history of changes between PrBoom versions since v2.1.0.
For historical reference, the complete LxDoom changelog follows it.

Changes from v2.2.3 to v2.2.4
- fixed sky-over-sky HOM
- add sound compatibility option
- shared texture palette isn't the default anymore
- better invulnerabilty rendering for non paletted OpenGL
- small compilation fixed for OpenGL on some unix platforms
- fix for dehacked files which change frames
- fixed name clash when compiling for some unix platforms
- flag counted items with different colour on the IDDT automap
- fixed extra shot sound when chaingun runs out of ammo
- fix some telefragging related desyncs
- fixed offsets for flipped sprites
- hopefully fix problems with network games on big-endian platforms

Changes from v2.2.2 to v2.2.3
- improved mouse handling
- intermission demo sync bug fixed
- framebuffer update fixes (solves flicker on fbcon)
- -forceoldbsp allowed in non-GL version, and saved in demos
- fix player colours in multiplayer demos
- apply workarounds for buggy pwads even during demo playback
- fix numpad 5 key
- allow compilation on systems where SDL is built without joystick support
- fix comp_skymap
- using anisotropic filtering when the OpenGL extension is available
- using paletted textures when the OpenGL extension is available
- added gl_use_paletted_texture option to glboom configuration file
- using shared texture palette when the OpenGL extension is available
- added gl_use_shared_texture_palette option to glboom configuration file

Changes from v2.2.1 to v2.2.2
- more demo sync problems for original Doom and Boom fixed
- added changeable samplerate for soundmixing
- added fullscreen/window toggle in option menu
- added double buffering
- floor rendering made more accurate
- Win32 config file handling fixed
- fix endian conversion problem on Linux/PPC

Changes from v2.2.0 to v2.2.1
- improved fix for demo sync problems with lost souls bouncing off floors